<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DormsDb</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="Option_AC">Air Conditioning? </string>
    <string name="Option_Laundry">Laundry machine?</string>
    <string name="Option_Printer">Printer?</string>
    <string name="Search">Search!</string>
    <string name="toastPrinter">You love to Print.</string>
    <string name="Searcher">Searcher</string>
    <string name="SubFree">Substance Free?</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="login_label">Login</string>
    <string name="Logout"><u>Log out</u></string>
    <string name="signUp"><u>Sign up for DorsmDB!</u></string>
<<<<<<< HEAD
    <string-array name="campus_name">
        <item><i>Choose Campus</i></item>
        <item >North</item>
        <item >South</item>
        <item >East</item>
        
    </string-array>
=======
>>>>>>> 5ba1e2a8990808dbbc87fcd1cec40b5bc6bbb313

</resources>
