<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="#ffffff"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/title_image" />

    <CheckBox
        android:id="@+id/checkBoxLaundry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/checkBoxAC"
        android:layout_marginTop="60dp"
        android:onClick="onCheckboxClick"
        android:text="@string/Option_Laundry" />

    <Button
        android:id="@+id/buttonSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/checkBoxPrinter"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:text="@string/Search" />

    <CheckBox
        android:id="@+id/checkBoxPrinter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/SubFree"
        android:layout_marginTop="48dp"
        android:onClick="onCheckboxClick"
        android:text="@string/Option_Printer" />

    <CheckBox
        android:id="@+id/checkBoxAC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/SubFree"
        android:layout_alignTop="@+id/imageView1"
        android:layout_marginTop="153dp"
        android:onClick="onCheckboxClick"
        android:text="@string/Option_AC" />

    <CheckBox
        android:id="@+id/SubFree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/checkBoxLaundry"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="52dp"
        android:text="@string/SubFree" />

</RelativeLayout>
